--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="My website title" />
-    <meta
-      property="og:description"
-      content="Summary of the contents of the page you are viewing"
-    />
+    <meta property="og:title" content="Bucketlist" />
+    <meta property="og:description" content="To save your whises" />
     <meta
       property="og:image"
       content="{{ url_for('static', filename='ogimage.jpg') }}"
@@ -39,6 +36,7 @@
       * {
         font-family: "Gowun Dodum", sans-serif;
       }
+
       .mypic {
         width: 100%;
         height: 200px;
@@ -59,9 +57,11 @@
         align-items: center;
         justify-content: center;
       }
+
       .mypic > h1 {
         font-size: 30px;
       }
+
       .mybox {
         width: 95%;
         max-width: 700px;
@@ -69,6 +69,7 @@
         box-shadow: 0px 0px 10px 0px lightblue;
         margin: 20px auto;
       }
+
       .mybucket {
         display: flex;
         flex-direction: row;
@@ -79,6 +80,7 @@
       .mybucket > input {
         width: 70%;
       }
+
       .mybox > li {
         display: flex;
         flex-direction: row;
@@ -88,6 +90,7 @@
         margin-bottom: 10px;
         min-height: 48px;
       }
+
       .mybox > li > h2 {
         max-width: 75%;
         font-size: 20px;
@@ -95,6 +98,7 @@
         margin-right: auto;
         margin-bottom: 0px;
       }
+
       .mybox > li > h2.done {
         text-decoration: line-through;
       }
@@ -115,41 +119,19 @@
               let bucket = rows[i]["bucket"];
               let num = rows[i]["num"];
               let done = rows[i]["done"];
-              let temp_html = "";
 
+              let temp_html = "";
               if (done === 0) {
-                temp_html = `
-                <li>
-        <h2>✅ ${bucket}</h2>
-        <button
-          onclick="done_bucket(${num})"
-          type="button"
-          class="btn btn-outline-primary"
-        >
-          Done!
-        </button>
-        <button
-          onclick="delete_bucket(${num})"
-          type="button"
-          class="btn btn-outline-primary"
-        >
-          delete!
-        </button>
-      </li>
-                `;
+                temp_html = `<li>
+                                    <h2>✅ ${bucket}</h2>
+                                    <button onclick="done_bucket(${num})" type="button" class="btn btn-outline-primary">done!</button>
+                                    <button onclick="delete_bucket(${num})" type="button" class="btn btn-outline-primary">delete!</button>
+                                </li>`;
               } else {
-                temp_html = `
-                <li>
-        <h2 class="done">✅ ${bucket}</h2>
-        <button
-          onclick="delete_bucket(${num})"
-          type="button"
-          class="btn btn-outline-primary"
-        >
-          delete!
-        </button>
-      </li>
-                `;
+                temp_html = `<li>
+                                    <h2 class="done">✅ ${bucket}</h2>
+                                    <button onclick="delete_bucket(${num})" type="button" class="btn btn-outline-primary">delete!</button>
+                                </li>`;
               }
               $("#bucket-list").append(temp_html);
             }
@@ -179,8 +161,20 @@
           },
         });
       }
+      function delete_bucket(num) {
+        $.ajax({
+          type: "POST",
+          url: "/bucket/delete",
+          data: { num_give: num },
+          success: function (response) {
+            alert(response["msg"]);
+            window.location.reload();
+          },
+        });
+      }
     </script>
   </head>
+
   <body>
     <div class="mypic">
       <h1>My Bucketlist</h1>
